--- a/App/App.csproj
+++ b/App/App.csproj
@@ -7,12 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\DataUpdatedSuccessfully.cshtml" />
+    <Content Remove="Pages\Shared\EditAdress.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
   </ItemGroup>
@@ -24,6 +30,24 @@
 
   <ItemGroup>
     <Folder Include="Pages\Shared\AddComputerPart\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Shared\EditAdress.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\DataUpdatedSuccessfully.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Shared\EditAdress.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\DataUpdatedSuccessfully.cshtml" />
+    <None Include="Pages\EditAdress.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\DataUpdatedSuccessfully.cshtml" />
   </ItemGroup>
 
 </Project>
