--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -12,4 +12,8 @@
     <Folder Include="ModelsForApp\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.7" />
+  </ItemGroup>
+
 </Project>
