Naprowienie niedzialajacego projektu

--- a/App/Properties/launchSettings.json
+++ b/App/Properties/launchSettings.json
@@ -1,37 +1,38 @@
 {
-  "profiles": {
-    "App": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7063;http://localhost:5064;https://192.168.56.1:7114",
-      "nativeDebugging": true,
-      "sqlDebugging": true
-    },
-    "IIS express": {
-      "commandName": "IISExpress"
-    },
-    "WSL": {
-      "commandName": "WSL2",
-      "launchBrowser": true,
-      "launchUrl": "https://localhost:7114",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "https://localhost:7114;http://localhost:5064;https://192.168.56.1:7114"
-      },
-      "distributionName": ""
+  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:55880",
+      "sslPort": 44318
     }
   },
-  "iisSettings": {
-    "windowsAuthentication": true,
-    "anonymousAuthentication": true,
-    "iis": {
-      "applicationUrl": "http://localhost:4554",
-      "sslPort": 0
+  "profiles": {
+    "http": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5286",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     },
-    "iisExpress": {
-      "applicationUrl": "http://192.168.56.1:4554",
-      "sslPort": 44364
+    "https": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7056;http://localhost:5286",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
