routing partialy refactorized

--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Komputerowo_AppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Komputerowo_app_db;Trusted_Connection=True;TrustServerCertificate=True"
   }
 
 }
